--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Nine Anns Flower Farm</h1>
+        <h1 class="boxhead"> <a href="index.html"> Nine Anns Flower Farm </a></h1>
         <nav class="boxhead">
             <ul>
                 <li><a href="#about">About Us</a></li>
