--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1 class="boxhead"> <a href="index.html"> Nine Anns Flower Farm </a></h1>
         <nav class="boxhead">
             <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#products">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="contactus.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -48,6 +48,11 @@
     </section>
 
     <footer>
+        <p>&copy; 2023 9Anns Flower Farm</p>
+    </footer>
+</body>
+
+</html>
         <p>&copy; 2023 9Anns Flower Farm</p>
     </footer>
 </body>
