--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
          <p>Welcome to Nine Anns, where we cultivate beautiful and vibrant flowers with love and care.</p>
-         <img src="images/dahlia.jpg" alt="Flowers at 9Anns"
+         <img src="dahlia.jpg" alt="Flowers at 9Anns"
         width="600"
         height="400">
         <h2>About Us</h2>
